# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  mixins.py  settings.py  texts.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: base_test_case.py  label_test_case.py  status_test_case.py  task_test_case.py  user_test_case.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: tests.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py  0003_alter_status_name.py
task_manager/statuses/tests/: status_test_case.py  tests.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_taskmodel_labels.py  0002_taskmodel_labels_alter_taskmodel_author.py  0003_alter_taskmodel_labels.py  0004_alter_taskmodel_labels.py  0005_rename_assignee_taskmodel_executor_and_more.py
task_manager/templates/: base.html  delete_form.html  header_menu.html  index.html  login.html  status_label_list.html  update_create_form.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/utils/: enums.py
(+24 files in other folders)
